@@ -1,5 +1,7 @@
 2007-06-16  Andreas Kirschbaum
 
+	* Implement lookat command by left-clicking in the map window.
+
 	* Do not allow to drop locked items.
 
 	* Make mouse bindings for mark/lock/apply/examine match the
